# httpserver

./: .gitignore  README.md
benchmarks/: README.md  benchmark.sh  quick_test.sh
benchmarks/results/: compare_20260115_014605.txt  cpp_20260115_014605.txt  rust_20260115_014605.txt
benchmarks/rust_server/: Cargo.toml
benchmarks/rust_server/src/: main.rs
coro_server/: coroutine.h  http_error.cpp  io_uring.cpp  io_uring.h  read_iterator.cpp
example/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  echo_server  main.cpp  perf.data  profile.sh
example/build_dep/: install_manifest.txt
example/install_dep/include/: io_uring.h  read_iterator.h  request_data.h  trie.h
example/install_dep/lib/cmake/coro_http_server/: coro_http_serverConfig-release.cmake  coro_http_serverConfig.cmake
example/server_build/: Makefile  cmake_install.cmake
server/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  http_error.h  http_server.cpp  http_server.h  iasio.h  io_uring.cpp  io_uring.h  mpsc_queue.h  read_iterator.cpp  read_iterator.h  request_data.h  server.cpp  server.h  trie.cpp  trie.h  wrapper.h
server/.cache/clangd/index/: async_io.cpp.09652BAB1F8E56D0.idx  async_read.cpp.43FEE329E477E3C3.idx  http_error.cpp.20873E36EC1797A6.idx  http_error.h.4820ABDC700A8AF0.idx  http_server.cpp.4E00E86F33EB2006.idx  http_server.h.23512F7043683CD2.idx  io_uring.cpp.AB63569531AC051F.idx  io_uring.h.AAAA420C97784D84.idx  main.cpp.C00A450477C9D97E.idx  read_iterator.cpp.F9E3A51F74466775.idx  read_iterator.h.41B2B5E0823FAA73.idx  request_data.h.92FD9E45E231D2C9.idx  stream_reader.cpp.77F0EE64DB9DDA57.idx  trie.cpp.5149B578549F12D9.idx  trie.h.095E3EE6878B0F08.idx
